@@ -57,8 +57,9 @@ public class EntityGroup extends AbstractEntity implements EntityListener {
     public void rotate(double angle) {
         try {
             groupRotation += angle;
-            Point2D center = getCenter();
-            getAllChildren().forEach(entity -> entity.rotate(center, angle));
+            Point2D pivotPoint = getPivotPoint();
+            Point2D rotationCenter = pivotPoint != null ? pivotPoint : getCenter();
+            getAllChildren().forEach(entity -> entity.rotate(rotationCenter, angle));
             invalidateBounds();
             notifyEvent(new EntityEvent(this, EventType.ROTATED));
         } catch (Exception e) {
@@ -258,7 +259,7 @@ public class EntityGroup extends AbstractEntity implements EntityListener {
      * @return a list of children entities
      */
     public final List<Entity> getChildren() {
-        return Collections.unmodifiableList(this.children);
+        return List.copyOf(this.children);
     }
 
     @Override
@@ -271,10 +272,11 @@ public class EntityGroup extends AbstractEntity implements EntityListener {
 
     @Override
     public void setRotation(double rotation) {
-        Point2D center = getCenter();
+        Point2D pivotPoint = getPivotPoint();
+        Point2D rotationCenter = pivotPoint != null ? pivotPoint : getCenter();
         double deltaRotation = rotation - getRotation();
         if (deltaRotation != 0) {
-            children.forEach(entity -> entity.rotate(center, deltaRotation));
+            children.forEach(entity -> entity.rotate(rotationCenter, deltaRotation));
         }
         groupRotation += deltaRotation;
         invalidateBounds();
@@ -306,6 +308,7 @@ public class EntityGroup extends AbstractEntity implements EntityListener {
             child.scale(sx, sy);
             child.setPosition(new Point2D.Double(originalPosition.getX() + (relativePosition.getX() * sx), originalPosition.getY() + (relativePosition.getY() * sy)));
         });
+
         invalidateBounds();
         notifyEvent(new EntityEvent(this, EventType.RESIZED));
     }
